make sure that the upload image section is completely visible

--- a/pleiades/notredame/browser/stylesheets/main.css
+++ b/pleiades/notredame/browser/stylesheets/main.css
@@ -151,7 +151,8 @@ fieldset {
 
 /* fixes for the plonebrowser add/edit image functionality */
 
-#plonebrowser #browseimage_panel #details_panel {
+#plonebrowser #browseimage_panel #details_panel,
+#plonebrowser #browseimage_panel #addimage_panel {
     margin-left: 0% !important;
 }
 
